# bot_cloud

./: .gitignore  AUTOSTART.md  PROJECT_STRUCTURE.md  README.md  bot-cloud.service  database.py  env.example  handlers.py  install_service.sh  main.py  plan.txt  pyproject.toml  requirements.txt  reset_bot.py  setup.py  start_bot_screen.sh  stop_bot_screen.sh  utils.py
.cursor/: rules.md
docs/: DELETE_FUNCTION.md  DOCS_REORGANIZATION.md  DUPLICATE_CHECK_SUMMARY.md  DUPLICATE_LINK_CHECK.md  EXPORT_FIX.md  EXPORT_FUNCTION.md  FILENAME_FIX_REPORT.md  INDEX.md  LINKS_FUNCTIONALITY.md  LINK_DELETE_FIX.md  LINK_DELETE_FIX_SUMMARY.md  MENU_IMPROVEMENT_REPORT.md  PHOTO_UPLOAD_FIX_REPORT.md  PROJECT_STRUCTURE.md  README.md  SEARCH_FIX_REPORT.md  SETUP_INSTRUCTIONS.md  SHARE_FIX_SUMMARY.md  SHARE_FUNCTION.md  STRUCTURE.md  TESTS_REORGANIZATION.md  UI_IMPROVEMENT_REPORT.md  UPDATE_REPORT.md  URL_AUTO_ADD_FEATURE.md  URL_AUTO_ADD_SUMMARY.md  URL_CANCEL_IMPROVEMENT.md  UTILITIES.md  plan.txt
src/: __init__.py
src/bot/: __init__.py  main.py
src/config/: __init__.py  (+1 more)
tests/: __init__.py  test_all_android_formats.py  test_apk_category.py  test_apk_integration.py  test_bot_info.py  test_correct_url.py  test_database.py  test_direct_share.py  test_integration_photo.py  test_menu_changes.py  test_menu_simple.py  test_photo_upload.py  test_real_share.py  test_safe_share.py  test_search_functionality.py  test_search_links_removal.py  test_share_format.py  test_share_functionality.py  test_share_link.py  test_start_command.py  test_start_with_params.py  test_unique_filenames.py
(+6 files in other folders)
